feat: Add Settings menu to perform backups / restores
